# bio-graph-nexus

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  exceptions.py  main.py
backend/app/db/: __init__.py  graph_repository.py
backend/app/nlp/: __init__.py  entity_extractor.py  pipeline.py  relation_extractor.py
backend/tests/: test_api.py  test_nlp.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.vue
frontend/src/components/: EntitySidebar.vue  GraphView.vue  HistorySidebar.vue  TextInput.vue
