[project]
name = "bio-graph-nexus"
version = "0.1.0"
description = "Knowledge graph extraction API"
authors = [
    {name = "k.kononenko",email = "kali-krit@mail.ru"}
]
license = "MIT"
requires-python = ">=3.12,<3.15"
dependencies = [
    "fastapi (>=0.138.0,<0.139.0)",
    "uvicorn[standard] (>=0.49.0,<0.50.0)",
    "spacy (>=3.8.14,<4.0.0)",
    "neo4j (>=6.2.0,<7.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)",
    "black (>=26.5.1,<27.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "mypy (>=2.1.0,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pytest-asyncio (>=1.4.0,<2.0.0)"
]
